hardware section right align fix

--- a/css/main.css
+++ b/css/main.css
@@ -139,6 +139,10 @@ a, a:visited, a:link {
 #hardwaresection .contentwrapper {
   width: 45%;
 }
+#hardwaresection .contentwrapper * {
+  text-align:right;
+}
+
 #hardwaresection .content {
   float: right;
 }
